<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.usease.myuniversity.EditProfileActivity">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/edit_app_bar"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_your_account"
        android:textColor="#111"
        android:textSize="20dp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/edit_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Status" />
    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:layout_weight="5"
            android:layout_marginLeft="20dp"

            android:id="@+id/edit_university"
            android:inputType="text"
            android:textSize="18dp"
            android:hint="@string/select_university"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:src="@drawable/search_icon"
            android:layout_width="28dp"
            android:layout_height="28dp" />
    </LinearLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/edit_groupid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_id" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:textColor="?android:textColorHint"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/select_your_student_type"
        android:textSize="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="8dp"


        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton

            android:id="@+id/edit_radio_cr"
            android:textSize="14dp"
            android:textColor="?android:textColorHint"
            android:text="@string/cr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:textSize="14dp"
            android:id="@+id/edit_radio_student"
            android:textColor="?android:textColorHint"
            android:text="Student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <TextView
        android:layout_gravity="right"
        android:textColor="?android:textColorHint"
        android:textSize="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/please_note_that_these_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button

        android:layout_marginRight="20dp"
        android:id="@+id/edit_save_btn"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#FFFF"
        android:background="@color/colorAccent"
        android:text="@string/save_changes"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>
