<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.usease.myuniversity.AddAnnouncementActivity">


    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/add_announcement_app_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/add_announcement_app_bar">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:orientation="vertical">

            <ImageButton
                android:id="@+id/add_announcement_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/linearLayout2"
                android:adjustViewBounds="true"
                android:background="@android:color/white"
                android:scaleType="centerCrop"
                android:src="@mipmap/add_btn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/announcemement_type"
                android:textColor="?android:textColorHint"
                android:textSize="13dp" />

            <RadioGroup
                android:id="@+id/add_announcement_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/add_announcement_radio_type_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/information"
                    android:textColor="?android:textColorHint"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/add_announcement_radio_type_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/warning"
                    android:textColor="?android:textColorHint"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/add_announcement_radio_type_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/news"
                    android:textColor="?android:textColorHint"
                    android:textSize="14dp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/coverage"
                android:textColor="?android:textColorHint"
                android:textSize="13dp" />

            <RadioGroup
                android:id="@+id/add_announcement_coverage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/add_announcement_radio_coverage_university"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/university"
                    android:textColor="?android:textColorHint"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/add_announcement_radio_coverage_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/group_only"
                    android:textColor="?android:textColorHint"
                    android:textSize="14dp" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_announcement_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_title"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="100"
                    android:maxLines="2" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_announcement_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_desc"
                    android:inputType="textCapSentences|textMultiLine"
                    android:layout_marginBottom="40dp"
                    android:maxLength="2000"
                    android:maxLines="4" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    </ScrollView>


</RelativeLayout>
